--- a/ui/window1.ui
+++ b/ui/window1.ui
@@ -86,6 +86,12 @@
                       <property name="layoutDirection">
                        <enum>Qt::LeftToRight</enum>
                       </property>
+                      <property name="frameShape">
+                       <enum>QFrame::NoFrame</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Plain</enum>
+                      </property>
                       <property name="widgetResizable">
                        <bool>true</bool>
                       </property>
@@ -97,24 +103,23 @@
                         <rect>
                          <x>0</x>
                          <y>0</y>
-                         <width>375</width>
-                         <height>387</height>
+                         <width>377</width>
+                         <height>389</height>
                         </rect>
                        </property>
                        <layout class="QVBoxLayout" name="verticalLayout_8">
                         <item>
-                         <widget class="PushButton" name="PushButton">
-                          <property name="text">
-                           <string>Push button</string>
+                         <spacer name="verticalSpacer">
+                          <property name="orientation">
+                           <enum>Qt::Vertical</enum>
                           </property>
-                         </widget>
-                        </item>
-                        <item>
-                         <widget class="PushButton" name="PushButton_2">
-                          <property name="text">
-                           <string>Push button</string>
+                          <property name="sizeHint" stdset="0">
+                           <size>
+                            <width>20</width>
+                            <height>40</height>
+                           </size>
                           </property>
-                         </widget>
+                         </spacer>
                         </item>
                        </layout>
                       </widget>
@@ -248,11 +253,6 @@
   </widget>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>PushButton</class>
-   <extends>QPushButton</extends>
-   <header>qfluentwidgets</header>
-  </customwidget>
   <customwidget>
    <class>ToolButton</class>
    <extends>QToolButton</extends>
